# internal/app/model/menu.go
@@ -2,19 +2,32 @@ package model
 
 type Menu struct {
 	Base
-	Code      uint   `json:"code"`
-	Name      string `json:"name" gorm:"not null;"`
-	Path      string `json:"path" gorm:"not null;comment:api路径;"`
-	Component string `json:"component" gorm:"not null;comment:组件路径;" `
-	Icon      string `json:"icon" gorm:"comment:icon图标;"`
-	Note      string `json:"note" gorm:"comment:备注;"`
-	Type      int    `json:"type"`
-	Status    int8   `json:"status" gorm:"comment:状态:1正常 2禁用;" `
-	Sort      int    `json:"sort" gorm:"comment:显示顺序;"`
+	Code      uint    `json:"code"`
+	Name      string  `json:"name" gorm:"not null;"`
+	Path      string  `json:"path" gorm:"not null;comment:api路径;"`
+	Component string  `json:"component" gorm:"not null;comment:组件路径;" `
+	Icon      string  `json:"icon" gorm:"comment:icon图标;"`
+	Note      string  `json:"note" gorm:"comment:备注;"`
+	Type      int     `json:"type"`
+	Status    int8    `json:"status" gorm:"comment:状态:1正常 2禁用;" `
+	Sort      int     `json:"sort" gorm:"comment:显示顺序;"`
+	ParentId  *uint64 `json:"parent_id" gorm:"column:parent_id"` // 允许为空的父ID
 
-	ParentId *uint64 `json:"parent_id" gorm:"column:parent_id"` // 允许为空的父ID
-	Parent   *Menu   `json:"parent" gorm:"foreignKey:ParentId;references:ID"`
-	Children []Menu  `gorm:"foreignKey:ParentId"`
+	Parent   *Menu  `json:"parent" gorm:"foreignKey:ParentId;references:ID"`
+	Children []Menu `gorm:"foreignKey:ParentId"`
 
 	_ struct{} `crud:"prefix:/menu,create,update,delete"`
+}
+
+type MenuReq struct {
+	Code      uint    `json:"code"`
+	Name      string  `json:"name" `
+	Path      string  `json:"path"  binding:"required" `
+	Component string  `json:"component"  binding:"required" `
+	Icon      string  `json:"icon" `
+	Note      string  `json:"note" `
+	Type      int     `json:"type"  binding:"required"`
+	Status    int8    `json:"status"  `
+	Sort      int     `json:"sort"  binding:"required" `
+	ParentId  *uint64 `json:"parent_id" `
 }
